# coralswap-core

./: Cargo.toml
contracts/mock_flash_receiver/: Cargo.toml
contracts/mock_flash_receiver/src/: lib.rs  malicious.rs
contracts/pair/: Cargo.toml
contracts/pair/src/: dynamic_fee.rs  errors.rs  events.rs  factory_client.rs  lib.rs  reentrancy.rs  storage.rs
contracts/pair/src/test/: burn.rs  dynamic_fee.rs  flash_loan.rs  mod.rs  pair_fee_override.rs  reentrancy.rs  views.rs
contracts/pair/test_snapshots/test/dynamic_fee/: test_multiple_swaps_accumulate_volatility.1.json  test_swap_updates_volatility_accumulator.1.json
contracts/pair/test_snapshots/test/flash_loan/: flash_loan_honest_receiver_repays.1.json  flash_loan_reentrancy_nested_flash_attack_reverts.1.json  flash_loan_reentrancy_swap_attack_reverts.1.json
contracts/pair/test_snapshots/test/initialize/: double_init_returns_already_initialized.1.json  happy_path_initializes_all_state.1.json  pair_state_stores_correct_addresses.1.json
contracts/pair/test_snapshots/test/mint/: test_dust_deposit_fails.1.json  test_first_deposit.1.json  test_price_accumulation.1.json  test_proportional_deposit.1.json
contracts/pair/test_snapshots/test/pair_fee_override/: pair_sees_none_when_no_override.1.json  pair_sees_override_from_factory.1.json  swap_succeeds_with_override_set.1.json  swap_uses_dynamic_fee_when_no_override.1.json  swap_with_override_does_not_panic_even_when_factory_missing.1.json
contracts/pair/test_snapshots/test/reentrancy/: test_guard_lock_error_autorelease_relock_cycle.1.json  (+1 more)
(+53 files in other folders)
